# dynamic-manga-studio

./: .env.example  .gitignore  README.md  目录说明.md
.superpowers/brainstorm/87759-1774489816/: .server-stopped  frontend-direction.html
backend/: pyproject.toml
backend/app/: main.py  video_download_proxy_main.py
backend/app/api/routes/: jobs.py  projects.py
backend/app/core/: config.py  db.py
backend/app/models/: job.py  project.py  storyboard.py
backend/app/schemas/: job.py  project.py
backend/app/services/: project_service.py  provider_registry.py  render_service.py  script_draft_service.py  storyboard_generation_service.py  video_download_proxy.py  video_generation_service.py
backend/app/storage/: file_store.py
backend/app/tasks/: celery_app.py  job_runner.py
backend/dynamic_manga_studio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/superpowers/plans/: 2026-03-26-storyboard-audio-rendering.md  2026-03-26-video-generator-rebuild.md
docs/superpowers/specs/: 2026-03-26-video-generator-rebuild-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api-client.ts
frontend/src/pages/: project-detail-page.tsx  video-generator-page.tsx
frontend/src/prototype/: prototype-app.tsx
scripts/: start_manga_project.sh  start_video_download_proxy.sh
文档/实施计划/: 动态漫剧创作工具实施计划.md  第一批真实模型接入实施计划.md
文档/设计文档/: 动态漫剧创作工具设计文档.md
(+5 files in other folders)
