[project]
name = "dynamic-manga-studio-backend"
version = "0.1.0"
description = "动态漫剧创作工具后端服务"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "imageio-ffmpeg>=0.5.1",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "psycopg[binary]>=3.2.4",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.37",
  "uvicorn[standard]>=0.34.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
